<resources>
    <string name="app_name">SensorLogger</string>

    // Strings for Main Activity
    <string name="hello_world">Hello world!</string>
    <string name="action_Logging_Interval">Log Interval</string>
    <string name="action_Choose_Sensor">Choose Sensor Type</string>
    <string name="action_startLogging">Start Logging</string>
    <string name="title_activity_settings_Logging_Interval">Settings Logging Interval</string>
    <string name="action_settings">Settings</string>
    <string name="Sensor_Type">Sensor Type</string>
    <string name="Sensor_LogInterval">Log.Interval</string>
    <string name="Sensor_Value1">Sensor Value 1</string>
    <string name="Sensor_Value2">Sensor Value 2</string>
    <string name="Sensor_Value3">Sensor Value 3</string>
    <string name="StartStopLog">Start/Stop Logging</string>
    <string name="LoggingInterval_ms"> ms</string>

    // Strings for Settings
    <string name="Settings_100ms">100 ms</string>
    <string name="Settings_500ms">500 ms</string>
    <string name="Settings_1s">1 s</string>
    <string name="Settings_5s">5 s</string>
    <string name="Settings_60s">1 min</string>

    // Strings for Sensor Chooser
    <string name="title_activity_choose_sensor">Choose Sensor Type</string>
</resources>
