<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.freethinkers.sensorlogger.SettingsLessActivity">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_100ms"
        android:id="@+id/radioButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="48dp"
        android:checked="true"
        android:onClick="onRadioButtonsClicked"
        android:clickable="true"
        android:enabled="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_500ms"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton"
        android:checked="false"
        android:onClick="onRadioButtonsClicked"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_1s"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton2"
        android:checked="false"
        android:onClick="onRadioButtonsClicked"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_5s"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        android:layout_alignLeft="@+id/radioButton3"
        android:layout_alignStart="@+id/radioButton3"
        android:checked="false"
        android:onClick="onRadioButtonsClicked"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_60s"
        android:id="@+id/radioButton5"
        android:layout_below="@+id/radioButton4"
        android:layout_alignLeft="@+id/radioButton4"
        android:layout_alignStart="@+id/radioButton4"
        android:checked="false"
        android:onClick="onRadioButtonsClicked"
        android:clickable="true" />
</RelativeLayout>
